[tool.poetry]
name = "rituallog"
version = "0.1.0"
description = ""
authors = ["Hugo Felix Marques <hfm@cin.ufpe.br>"]
include = ["rituallog/settings.toml"]

[tool.poetry.dependencies]
python = "^3.8"
sqlmodel = "^0.0.6"
fastapi = "^0.75.2"
typer = "^0.4.1"
rich = "^12.2.0"
dynaconf = "^3.1.8"
black = "^22.3.0"
flake8 = "^4.0.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"

[tool.poetry.scripts]
rituallog = "rituallog.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
